--- a/index.html
+++ b/index.html
@@ -8,30 +8,20 @@
   </head>
   <body>
     <div class="container-buttons">
-      <button>Mostrar tudo <br />ForEach</button>
-      <button>Mapear <br />Map</button>
-      <button>Somar tudo <br>Reduce</button>
-      <button>
-        Filtrar <br />
-        Filter
-      </button>
+      <button class="show-all">Mostrar tudo <br />ForEach</button>
+      <button class="map-all">Mapear <br />Map</button>
+      <button class="sum-all">Somar tudo <br />Reduce</button>
+      <button class="filter-all">Filtrar <br />Filter</button>
     </div>
     <ul>
+      <!-- 
       <li>
         <img src="./img/bacon-egg.png" />
         <p>X-Bacon Egg</p>
         <p class="item-price">R$ 30,00</p>
-      </li>
-      <li>
-        <img src="./img/bacon-egg.png" />
-        <p>X-Bacon Egg</p>
-        <p class="item-price">R$ 30,00</p>
-      </li>
-      <li>
-        <img src="./img/bacon-egg.png" />
-        <p>X-Bacon Egg</p>
-        <p class="item-price">R$ 30,00</p>
-      </li>
+      </li> -->
     </ul>
   </body>
+  <script src="./script.js"></script>
+  <script src="./products.js"></script>
 </html>
