--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div class="container-buttons">
-      <button class="show-all">Mostrar tudo <br />ForEach</button>
-      <button class="map-all">Mapear <br />Map</button>
-      <button class="sum-all">Somar tudo <br />Reduce</button>
-      <button class="filter-all">Filtrar <br />Filter</button>
+      <button class="show-all">TUDO <br /><span>ForEach</span></button>
+      <button class="map-all">MAPEAR <br /><span>Map</span></button>
+      <button class="sum-all">TOTAL <br /><span>Reduce</span></button>
+      <button class="filter-all">FILTRAR <br /><span>Filter</span></button>
     </div>
     <ul>
       <!-- 
