--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <button class="sum-all">TOTAL <br /><span>Reduce</span></button>
       <button class="filter-all">FILTRAR <br /><span>Filter</span></button>
     </div>
-    <ul>
-    </ul>
+    <ul></ul>
+    <img class="burguer" src="./img/fundo.jpg" alt="burguer" />
   </body>
   <script src="./script.js"></script>
   <script src="./products.js"></script>
